--- a/front/src/App.css
+++ b/front/src/App.css
@@ -30,9 +30,9 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: translate(100%);
   }
   to {
-    transform: rotate(360deg);
+    transform: translate(-100%);
   }
 }
