--- a/front/Grootoony/css/animate.css
+++ b/front/Grootoony/css/animate.css
@@ -6,3 +6,21 @@
       opacity:1;
     }
 }
+
+@keyframes animate-play-img {
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:0.5;
+    }
+}
+
+@keyframes animate-play-img-rev {
+    0% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0;
+    }
+}
