--- a/front/Grootoony/css/style2.css
+++ b/front/Grootoony/css/style2.css
@@ -24,6 +24,7 @@
 	vertical-align: middle;
 	line-height: 150px;
 	opacity: 0;
+	transform: scale(0.5);
 }
 #table0 {
 	top: 5%;
@@ -31,7 +32,7 @@
 }
 #table1 {
 	top: 15%;
-	left: 20%;
+	left: 10%;
 }
 #table2 {
 	top: 25%;
@@ -39,11 +40,11 @@
 }
 #table3 {
 	top: 15%;
-	right: 20%;
+	right: 10%;
 }
 #table4 {
 	top: 35%;
-	left: 20%;
+	left: 10%;
 }
 #table5 {
 	top: 45%;
@@ -51,15 +52,15 @@
 }
 #table6 {
 	top: 35%;
-	right: 20%;
+	right: 10%;
 }
 #table7 {
 	top: 55%;
-	right: 20%;
+	right: 10%;
 }
 #table8 {
 	top: 75%;
-	right: 20%;
+	right: 10%;
 }
 
 .tableABS {
@@ -76,6 +77,7 @@
 	text-align: center;
 	vertical-align: middle;
 	line-height: 100px;
+	transform: scale(0.5);
 }
 
 button {
@@ -84,18 +86,20 @@ button {
 .showPlace {
 	position: relative;
 	bottom: 10px;
-	width: 500px;
-	left: calc(50% - 255px);
+	width: 100%;
+	left: 0vw;
 	border-radius: 20px;
-	font-size: 50px;
-	line-height: 70px;
+	font-size: 5vw;
+	line-height: 5.5vw;
+	letter-spacing: 2px;
 }
 .closePlace {
 	position: absolute;
 	top: 10px;
-	width: 250px;
+	width: 25vw;
 	left: calc(50% - 125px);
 	border-radius: 20px;
-	font-size: 20px;
-	line-height: 35px;
+	font-size: 2vw;
+	line-height: 2.5vw;
+	letter-spacing: 2px;
 }
