--- a/front/Grootoony/css/style.css
+++ b/front/Grootoony/css/style.css
@@ -43,10 +43,10 @@ body {
     animation-fill-mode: forwards;
 }
 .play-img {
-    width: 50vw;
-    position: absolute;
-    top: 15vw;
-    left: calc(50% - 25vw);
+    width: 50%;
+    position: relative;
+    top: -25%;
+    left: 25%;
     opacity: 0;
 
     animation-delay: 0s;
@@ -65,28 +65,55 @@ body {
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
-.bottom-box {
-    font-family:Habibi,Verdana, Geneva, Tahoma, sans-serif;
-    display: none;
-    opacity: 0;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-    font-size: 3.5vw;
-    line-height: 5vw;
-    letter-spacing: 2px;
-    padding-top: 20px;
-    border-top: 1px solid white;
+@media only screen and (max-width: 500px) {
+    .bottom-box {
+        font-family: Habibi, Verdana, Geneva, Tahoma, sans-serif;
+        display: none;
+        opacity: 0;
+        flex-direction: row;
+        justify-content: center;
+        text-align: center;
+        font-size: 3.5vw;
+        line-height: 5vw;
+        letter-spacing: 2px;
+        padding-top: 20px;
+        border-top: 1px solid white;
+    }
+
+    .title-bottom-box {
+        font-family: Habibi, Verdana, Geneva, Tahoma, sans-serif;
+        padding: 20px;
+        text-align: center;
+        font-size: 4vw;
+        line-height: 5.5vw;
+        letter-spacing: 3px;
+    }
+}
+@media only screen and (min-width: 501px) {
+    .bottom-box {
+        font-family: Habibi, Verdana, Geneva, Tahoma, sans-serif;
+        display: none;
+        opacity: 0;
+        flex-direction: row;
+        justify-content: center;
+        text-align: center;
+        font-size: 1.5vw;
+        line-height: 2vw;
+        letter-spacing: 2px;
+        padding-top: 20px;
+        border-top: 1px solid white;
+    }
+
+    .title-bottom-box {
+        font-family: Habibi, Verdana, Geneva, Tahoma, sans-serif;
+        padding: 20px;
+        text-align: center;
+        font-size: 2vw;
+        line-height: 2.5vw;
+        letter-spacing: 3px;
+    }
 }
 
-.title-bottom-box {
-    font-family:Habibi,Verdana, Geneva, Tahoma, sans-serif;
-    padding: 20px;
-    text-align: center;
-    font-size: 4vw;
-    line-height: 5.5vw;
-    letter-spacing: 3px;
-}
 .snaw {
     flex-grow: 1;
 }
