--- a/front/Grootoony/spis/style.css
+++ b/front/Grootoony/spis/style.css
@@ -1,16 +1,32 @@
 body {
 	background-color: rgba(0, 0, 0, 0);
 	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+}
+
+#container1 {
+	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
+	width: 33%;
+}
+#container2 {
+	display: flex;
+	flex-direction: column;
+	width: 33%;
+}
+#container3 {
+	display: flex;
+	flex-direction: column;
+	width: 33%;
 }
 
 .person {
-	width: 33%;
-	height: calc(100vh / 34);
+	width: 90%;
+	height: calc(100vh / 27);
 	background-color: white;
 	border: 5px solid silver;
-	line-height: calc(100vh / 34);
+	line-height: calc(100vh / 27);
 	font-size: 20px;
 	padding: 2px;
 	text-align: center;
