--- a/front/Grootoony/spis/style.css
+++ b/front/Grootoony/spis/style.css
@@ -1,4 +1,6 @@
 body {
+	width: 768px;
+	height: 1024px;
 	background-color: rgba(0, 0, 0, 0);
 	display: flex;
 	flex-direction: row;
@@ -23,14 +25,14 @@ body {
 
 .person {
 	width: 90%;
-	height: calc(100vh / 27);
+	height: calc(1024px / 35);
 	background-color: white;
-	border: 5px solid silver;
-	line-height: calc(100vh / 27);
-	font-size: 20px;
-	padding: 2px;
+	border: 2px solid silver;
+	line-height: calc(1024px / 35);
+	font-size: 15px;
+	padding: 1px;
 	text-align: center;
-	margin: 2px;
+	margin: 1px;
 }
 
 #wrapper {
